Add inspection to report untranslated entries